--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -79,14 +79,11 @@
           height: 12rem;
           position: absolute;
           font-size: 10rem;
+          font-weight: bold;
           right: -2rem;
           bottom: -2rem;
         }
 
-        img {
-          max-width: 100%;
-          height: auto;
-        }
       }
 
       .oakSlika {
