--- a/styles/style.scss
+++ b/styles/style.scss
@@ -13,7 +13,7 @@ body {
   color: #eeffff;
   background-color: #061a33;
   font-family: "Titillium Web", sans-serif;
-  transition: all 0.5s ease-in-out;
+  transition: all 1s ease-in-out;
 }
 
 /*vse za dnevno temo*/
@@ -113,7 +113,7 @@ a {
   visibility:hidden;
 }
 
-body.day .paralax-container .noc{
+body.day .paralax-container img.noc{
   display:hidden;
 }
 
