--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -32,4 +32,146 @@
       z-index: 50;
     }
   }
+
+  /* SLIDER S PROJEKTI */
+
+  .container-projekti {
+    grid-row: 2 / 4;
+    grid-column: 3;
+    align-self: center;
+    justify-self: center;
+    height: 70%;
+    width: 90%;
+    display: grid;
+    grid-template-columns: 10% 80% 10%;
+
+    .projekt-slika {
+      padding-left: 0.5rem;
+      padding-right: 0.5rem;
+      position: relative;
+      z-index: 1;
+
+      .proSlide {
+        z-index: 1;
+        max-width: 100%;
+        height: 100%;
+        background-position-x: center;
+        background-position-y: center;
+        background-repeat: no-repeat;
+        background-attachment: scroll;
+
+        background-size: auto;
+        background-origin: padding-box;
+        background-clip: border-box;
+        background-size: cover;
+
+        .st-projekta {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background-color: #eeffff;
+          color: #061a33;
+          z-index: 2;
+          text-align: center;
+          width: 12rem;
+          height: 12rem;
+          position: absolute;
+          font-size: 10rem;
+          font-weight: bold;
+          right: -2rem;
+          bottom: -2rem;
+        }
+
+      }
+
+      .oakSlika {
+        background-image: linear-gradient(
+            rgba(0, 0, 0, 0.3),
+            rgba(0, 0, 0, 0.3)
+          ),
+          url("../img/test1.jpg");
+      }
+      .andSlika {
+        background-image: linear-gradient(
+            rgba(0, 0, 0, 0.3),
+            rgba(0, 0, 0, 0.3)
+          ),
+          url("../img/test2.jpg");
+      }
+      .pikSlika {
+        background-image: linear-gradient(
+            rgba(0, 0, 0, 0.3),
+            rgba(0, 0, 0, 0.3)
+          ),
+          url("../img/test3.jpg");
+      }
+    }
+
+    .nazaj-naprej {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      i {
+        padding-left: 10px;
+        padding-right: 10px;
+        cursor: pointer;
+        font-size: 10rem;
+
+        &:hover {
+          color: #ff4d5a;
+        }
+      }
+    }
+  }
+
+  /* OPISI PROJEKTOV */
+
+  .opisi-projektov {
+    grid-row: 3 / 3;
+    grid-column: 2/2;
+    /*background-color: white;*/
+    padding: 4rem 4rem 4rem 4rem;
+    text-align: center;
+    /*color: #061A33; Po koncanem urejanju izbrisi oz dodaj dnevni nacin*/
+
+    h4 {
+      font-size: 5rem;
+    }
+
+    h5 {
+      font-size: 3.5rem;
+    }
+
+    p {
+      font-size: 2.5rem;
+      margin-top: 1rem;
+    }
+
+    .orodja {
+      margin-top: 2rem;
+    }
+
+    .obisci-stran {
+      margin-top: 3rem;
+      color: #eeffff;
+    }
+    .obisci-stran:hover {
+      color: #061a33;
+    }
+
+    a.button {
+      border: none;
+      padding: 7px 35px;
+      cursor: pointer;
+      outline: none;
+      background: #ff4d5a;
+      font-size: 18px;
+      border-radius: 2rem;
+
+      &:hover{
+        color: #061a33;
+      }
+    }
+  }
 }
