--- a/styles/style.scss
+++ b/styles/style.scss
@@ -49,6 +49,18 @@ body.day .menu-btn__burger::after {
   background: #061a33;
 }
 
+/* dnevni za stevilko pri projektih */
+
+body.day .pro .container-projekti .projekt-slika .proSlide .st-projekta {
+  background-color: #061a33;
+  color: #eeffff;
+}
+
+/* dnevni za tipko pri projektih */
+body.day .pro .opisi-projektov a.button:hover {
+  color: #eeffff;
+}
+
 /*dnevna kontaktna forma*/
 
 body.day .kontaktcontainer {
