--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -12,6 +12,9 @@
     justify-self: flex-start;
     margin-left: 5rem;
     margin-bottom: 5rem;
+    span{
+      margin-left:12rem;
+    }
   }
 
   .pike {
